Fix code formatting and add new features

--- a/sample_test.ipynb
+++ b/sample_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "from pilothub.pptnotes import PPTx2Notes\n",
     "\n",
     "model = \"gpt-3.5-turbo-1106\"\n",
-    "api_key = \"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\"\n",
-    "source_path = r\"C:\\Users\\Anshu Pandey\\Downloads\\PPT_001_Introduction to Big Data Ingestion.pptx\"\n",
+    "api_key = \"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\"\n",
+    "source_path = r\"C:\\Users\\Anshu Pandey\\Downloads\\PPT_1_synthetic_data.pptx\"\n",
     "dest_path = r\"PPT_pilothub.pptx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,31 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of slides  79\n"
+      "Total Number of slides  103\n"
      ]
     }
    ],
    "source": [
     "ppt_client = PPTx2Notes(file_path=source_path)\n",
-    "print(\"Total Number of slides \",len(ppt_client.slides))"
+    "n = len(ppt_client.slides)\n",
+    "print(\"Total Number of slides \",n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "skip_slides_index = [0,75,76,77,78]\n",
-    "skip_slides_layout = [\"CoverPage\",\"Quote Slide\",\"Agenda\",\"Section Header\",\"RunningMan-Infographic\"]\n",
-    "skip_slide_titles = [\"quiz\",]\n",
+    "skip_slides_index = [0,n-3,n-2,n-1,n]\n",
+    "skip_slides_layout = [\"1_Custom Layout\",\"Quote Slide\",\"Contemporary_Title v1\",\"Section Header\",\"Last_Slide v1\",\"Quiz\",\"Summary\"]\n",
+    "skip_slide_titles = [\"quiz\",\"summary\"]\n",
     "ppt_client.set_skip_slides(skip_slides_index=skip_slides_index,\n",
     "                           skip_slides_layout=skip_slides_layout,\n",
     "                           skip_slide_titles=skip_slide_titles)\n"
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +101,8 @@
     "                               SET_AI_TEXT_FOR_SKIP_SLIDES=True,\n",
     "                               AI_PROPMT_SKIP_SLIDES=ai_prompt_for_skip_slides,\n",
     "                               AI_PROMPT_DICT_SKIP_SLIDES=ai_prompt_dict,\n",
-    "                               DEFAULT_PROMPT_FOR_OTHER_SLIDES=default_prompt)\n"
+    "                               DEFAULT_PROMPT_FOR_OTHER_SLIDES=default_prompt,\n",
+    "                               SKIP_NOTES_FOR_SLIDES_WITH_NOTES=True)\n"
    ]
   },
   {
