Update pilothub version to 0.1.8 and make various changes to README and code files

--- a/README.ipynb
+++ b/README.ipynb
@@ -168,7 +168,7 @@
     "handbook_maker.convert_ppt_to_handbook(output_file_path=output_path,\n",
     "                                       skip_slides=skip_slides,\n",
     "                                       content_layout_name=content_layout_name,\n",
-    "                                       skip_text_from_slides=skip_text_from_slides)\n"
+    "                                       skip_text_from_slides=skip_text_from_slides)"
    ]
   },
   {
